Initial Migration to Compose of the work browser and other improvements